# test_itk

./: .dockerignore  .env.sample  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
const/: const.py  errors.py  views.py
docker/api/: Dockerfile
tasks/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
tasks/management/commands/: create_test_data.py
